# STM32Helper

./: .gitignore  .mxproject  CMakeLists.txt  README.md  demo.ioc  readme.md
Core/Inc/: main.h
Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
cmake/: my-gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
libs/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
libs/u8g2_lib/: CMakeLists.txt  u8g2_com_stm32_hw_spi_hal.c
